Cross link TIPs 558 and 560; they're a pair.

--- a/tip/558.md
+++ b/tip/558.md
@@ -32,7 +32,8 @@ Long term, we want to support _both_ methods of working; that means that we
 will need new classes to introduce the capabilities required. The former can
 be a "configurable" class, and the latter can be a "widget" base class (and
 which is Out Of Scope for this TIP other than to note that this TIP is _not_
-attempting to support it).
+attempting to support it; see [TIP #560](560.md) for the detail of a proposal
+for dealing with objects with the Tk configuration style.).
 
 Channel configuration is relatively simple, in that no attempt is ever made to
 make changes transactional, and one command (or one public method) handles all
