--- a/tip/560.md
+++ b/tip/560.md
@@ -12,8 +12,9 @@
 
 # Abstract
 
-This TIP is a companion for [TIP #558](558.md); it describes how to build a
-property system based on TclOO that can support making Tk megawidgets.
+This TIP is a companion for [TIP #558](558.md) and builds upon the basic
+facilities described in it; it describes how to build a property system based
+on TclOO that can support making Tk megawidgets.
 
 # Rationale and Design Requirements
 
@@ -157,8 +158,11 @@ anything back.
 ## Interaction with Fundamental TclOO and Tk Mechanisms
 
 As all properties are readable in Tk, all will be listed in the readable
-properties of the class. Most properties will also be listed in the writable
-properties of the class, but initialisation only properties will not.
+properties of the class (see [TIP #558](558.md) for the Tcl mechanism for
+this). Most properties will also be listed in the writable properties of the
+class, but initialisation only properties will not. (Note once again:
+megawidgets are not **oo:configurable** in the sense of [TIP #558](558.md),
+but they do use the same basic TclOO mechanisms.)
 
 The following methods will be created for each property (where _name_ is the
 hyphen-prefixed version of the name):
