Add link to tclkit binaries

--- a/tip/556.md
+++ b/tip/556.md
@@ -143,6 +143,8 @@ To compare the speed of the new widgets you can run the test frame-30.1. It will
 
 # Examples
 
+Ready to run tclkit binaries for Linux and Windows can be found [here](https://sourceforge.net/projects/kbskit/files/tip556/)
+
     #
     # Configurable object
     #
