--- a/tip/557.md
+++ b/tip/557.md
@@ -14,7 +14,7 @@
 
 Every once in a while there is a request to be able to compile Tcl with a C++ compiler. This
 would - in theory - allow C++ exceptions thrown by extensions to be handled by Tcl. This TIP
-is _not_ about adding any code to Tcl doing that. But - as a first step - at least, Tcl needs
+is _NOT_ about adding any code to Tcl doing that. But - as a first step - at least, Tcl needs
 to compile well with a C++ compiler even though we don't use any C++ features.
 
 This TIP proposes making Tcl compilable with a C++ compiler, without actually
@@ -36,6 +36,9 @@ The Tcl source-code has been strictified in the following ways:
 
 Nothing is done yet in the Tcl code to handled C++ exception, neither is any of the
 API now available as C++ classes.
+
+Tk has a `cplusplus` branch as well, doing the same. This work is complete for
+UNIX, but not yet for Windows and MacOSX.
 
 # Copyright
 
