560: More detail on implementation mechanisms

--- a/tip/560.md
+++ b/tip/560.md
@@ -6,15 +6,15 @@
         Created:        23-Jan-2020
         Post-History:
         Tcl-Version:    8.7
-        Keywords:       Tk, TclOO, properties
-		Tk-Branch:      tip-560
+        Keywords:       Tk, TclOO, configuration, properties, options
+        Tk-Branch:      tip-560
 ------
 
 # Abstract
 
 This TIP is a companion for [TIP #558](558.md) and builds upon the basic
-facilities described in it; it describes how to build a property system based
-on TclOO that can support making Tk megawidgets.
+facilities described in it; it describes how to build a configuration system
+based on TclOO that can support making Tk megawidgets.
 
 # Rationale and Design Requirements
 
@@ -23,22 +23,24 @@ behaved like classes. However, configuration of Tk-like objects is quite
 complex and has long been one of the most awkward parts for authors of
 megawidgets, often leading to only partial implementations. It is also rather
 different to the simple system described in [TIP #558](558.md). In particular,
-properties can be configured from defaults, from the option database, or
+options can be configured from defaults, from the option database, or
 explicitly, and two methods, **configure** and **cget**, to handle scripted
-access; **configure** returns a property descriptor when reading, whereas
-**cget** just reads the value of the property.
+access; **configure** returns an option descriptor when reading, whereas
+**cget** just reads the value of the option. (Terminology note: Tcl has
+_properties_ while Tk has _options_.)
 
-It should be noted that this scheme is _semantically incompatible_ with the
-**configure** of [TIP #558](558.md); the results of **configure** are entirely
-different, with one returning the property value itself and the other
-returning a property descriptor (a short list); both mechanisms are present
-"in the wild" so attempting to unify this is extremely difficult with how
-things stand. Therefore it is a _non-goal_ of this TIP to design a system that
-can allow an object to be accessed by both systems at once.
+It should be noted that this scheme is _necessarily semantically incompatible_
+with the **configure** of [TIP #558](558.md); the results of **configure** are
+entirely different, with one returning the property value itself and the other
+returning an option descriptor (a short list); both mechanisms are present "in
+the wild" so attempting to unify this is extremely difficult with how things
+stand. Therefore it is a _non-goal_ of this TIP to design a system that can
+allow an object to be accessed by both systems at once; that is never going to
+work right.
 
-There are also properties that can only be configured during widget creation
+There are also options that can only be configured during widget creation
 (e.g., the **-use** option of toplevels and the **-class** option of quite a
-few widgets) though all properties are always readable. Another complexity is
+few widgets) though all options are always readable. Another complexity is
 that calls to **configure** are transactional; no changes are applied unless
 all changes are applied (though a useless redisplay might be
 triggered). What's more, any **-class** option needs to be handled early as it
@@ -46,9 +48,9 @@ changes how the configuration database is read from. (Indeed, this is omitted
 from the standard mechanism, just as it is also handled specially in Tk frame
 widgets and so on.)
 
-Finally, there should be a mechanism for supporting aliases of properties.
+Finally, there should be a mechanism for supporting aliases of options.
 
-In support of this, we will want to support typing of properties as this is a
+In support of this, we will want to support typing of options as this is a
 common feature of Tk widgets. While there is a substantial set of standard
 types (such as strings, colors, images, and screen distances) it is an open
 set: we need a way of allowing user code to add custom types. A common custom
@@ -65,71 +67,66 @@ nothing) intended to be used from constructors, and a non-exported
 **PostConfigure** method intended as a point for user- and
 subclass-interception. In addition, Tk will supply a metaclass,
 **tk::megawidget**, that will allow the creation of definitions suitable for
-configuration (that class may gain other behaviours in the future). As with
-the **oo::configurable** metaclass, property names will be given without
-leading hyphens when they are specified.
+configuration (that class may gain other behaviours in the future) with the
+**option** declaration (note that this isn't the built-in **option** command,
+but has the same name so that options are always called that). As with the
+**oo::configurable** metaclass, option names will be given without leading
+hyphens when they are specified.
 
     tk::megawidget create myLabel {
         superclass tk::configurable
 
-        property label
-        property borderwidth -type distance -default 1px \
+        option label
+        option borderwidth -type distance -default 1px \
             -name borderWidth -class BorderWidth
-        property bd -alias borderwidth
+        option bd -alias borderwidth
     }
 
-As we can see from this, we want to support some options for a property. The
-full list (not fully shown above) is:
+As we can see from this, we want to support some configuration properties for
+an option. The full list (not fully shown above) is:
 
 * **-name** *optName*
 
-    This gives the name used for looking up a default in the options
-    database. It defaults to the main name of the property with **string
-    tolower** applied to it.
+    This gives the name used for looking up a default in the option database.
+    It defaults to the main name of the option with **string tolower** applied
+    to it.
 
 * **-class** *clsName*
 
-    This gives the class name used for looking up a default in the options
+    This gives the class name used for looking up a default in the option
     database (this is not a TclOO name). It defaults to the main name of the
-    property with **string totitle** applied to it.
+    option with **string totitle** applied to it.
 
 * **-default** *value*
 
-    The default value of the option, used when no other default is
-    available. Its default will depend on the type of the option (see below),
-    but is usually either the empty string or a zero value. The default will
-    be validated against the type.
+    The default value of the option, used when no other default is available.
+    Its default will depend on the type of the option (see below), but is
+    usually either the empty string or a zero value. The default will be
+    validated against the type.
 
 * **-type** *typeName*
 
     The type of the value. The types will be subcommands of an ensemble (see
-    **Property Types** below) that will provide defaults and validation. The
-    default type will be **string**, which will do no validation and use a default
-    that is empty.
+    **Option Types** below) that will provide defaults and validation. The
+    default type will be **string**, which will do no validation and use a
+    default that is empty.
 
 * **-initonly** *boolean*
 
-    Controls whether this is an initialisation only property. Initialisation
-    only properties may only be set by the **Initialise** method, and not by
-    **configure**. (For example, real initialise-only properties are the
-    **-use** property of toplevels and the **-container** property of frames.)
-    Properties are not initialisation only by default; this is expected to be
-    a rare use case.
+    Controls whether this is an initialisation only option. Initialisation
+    only options may only be set by the **Initialise** method, and not by
+    **configure**. (For example, real initialise-only options are the **-use**
+    option of toplevels and the **-container** option of frames.)  Options are
+    not initialisation only by default; this is expected to be a rare use
+    case.
 
-* **-alias** *propertyName*
+* **-alias** *optionName*
 
-    Makes this property an alias for another property, which must exist at
-    this point. The other options to **property** (as described above) will be
-    illegal if this is given. Note that alias properties are not set by
-    initialisation (unless explicitly provided), since their underlying
-    property should be set instead.
-
-The storage mechanism for properties will be fixed to be the array in the
-object instance with the empty local name (so the property `foo` will be in
-array element variable `(foo)` in the instance namespace; this is a trick
-stolen from stooop). State saving and reloading (so that changes are
-approximately transactional) will be done with **array get** and **array
-set**, and will *not* go via the validation.
+    Makes this option an alias for another option, which must exist at this
+    point (for sanity's sake if nothing else). The other configuration
+    properties to **option** (as described above) will be illegal if this is
+    given. Note that alias options are not set by initialisation (unless
+    explicitly provided), since their underlying option should be set instead.
 
 The **configure** and **cget** methods will work in ways that should be
 immediately recognisable to Tk users. There will also be a non-exported
@@ -147,7 +144,7 @@ which will take its first argument to be the widget path name (we do not
 assume that this is the same as the object name) and an even number of
 following arguments that will be the same as if for **configure**. The
 initialisation will write _all_ elements of the array, using the information
-from the property configuration and retrieved from the option database (see
+from the option configuration and retrieved from the option database (see
 **option get**), and is the only method that will write initialisation-only
 elements. Note that this method is intended to be called from a constructor,
 and will _not_ call the **PostConfigure** method or perform state rollback on
@@ -155,47 +152,107 @@ failure; the caller can do any system validation afterwards, and validation
 failures are expected to abort widget creation altogether rather than rolling
 anything back.
 
+The **Initialise** method may only be called (successfully) once.
+
 ## Interaction with Fundamental TclOO and Tk Mechanisms
 
-As all properties are readable in Tk, all will be listed in the readable
+As all options are readable in Tk, all will be listed in the readable
 properties of the class (see [TIP #558](558.md) for the Tcl mechanism for
-this). Most properties will also be listed in the writable properties of the
-class, but initialisation only properties will not. (Note once again:
-megawidgets are not **oo:configurable** in the sense of [TIP #558](558.md),
-but they do use the same basic TclOO mechanisms.)
+this). Most options will also be listed in the writable properties of the
+class, but initialisation only options will not. (Note once again: megawidgets
+are not **oo:configurable** in the sense of [TIP #558](558.md), but they do
+use the same basic TclOO mechanisms.)
 
-The following methods will be created for each property (where _name_ is the
-hyphen-prefixed version of the name):
+The following methods will be created for each option (where _name_ is the
+hyphen-removed version of the name):
 
-* **<OptDescribe**_name_**>** — takes no arguments and returns a description
-  of the parts of the property descriptor that do not change. In particular,
-  this is a list of three items; these are the option database name of the
-  property, the option database class of the property, and the actual default
-  value of the property.
+* **<OptDescribe-**_name_**>** — takes no arguments and returns a description
+  of the parts of the option descriptor that do not change. In particular,
+  this is a list of three items for non-alias options; these are the option
+  database name of the option, the option database class of the option, and
+  the actual default value of the option. For aliases, this is a
+  single-element list containing the name of the target option.
 
-* **<OptValidate**_name_**>** — takes a single value, checks whether the value
-  is of the type of the property, and returns the normalized property value.
-  Typically forwarded to the **validate** method of the property's type
-  object.
+* **<OptValidate-**_name_**>** — takes a single value, checks whether the
+  value is of the type of the option, and returns the normalized option value.
+  Typically forwarded to the **validate** method of the option's type object.
 
-Again, also note that the actual storage of the options is the array in the
-class with the empty name. C code may need to set traces on elements of the
-array; these may be established before or after the **Initialise** method is
-called.
+* **<OptRead-**_name_**>** — how to actually read the option out of whatever
+  storage it is implemented with. Takes no arguments and returns the current
+  value of the option. Note that if a method exists with this name in the
+  class, it is _not_ overridden by the **option** declaration; this makes
+  providing implementations in C on a case-by-case basis relatively straight
+  forward.
+
+* **<OptWrite-**_name_**>** — how to actually write the option to whatever
+  storage it is implemented with. Takes a single argument, the value to write
+  (after validation and normalization). Return value is ignored.  Note that if
+  a method exists with this name in the class, it is _not_ overridden by the
+  **option** declaration; this makes providing implementations in C on a
+  case-by-case basis relatively straight forward.
+
+The _default storage mechanism_ for options will be the array in the object
+instance with the empty local name (so the option `foo` will be in array
+element variable `(foo)` in the instance namespace; this is a trick stolen
+from stooop). This can be overridden by defining appropriate non-exported
+methods, for which there are these implementations provided by default:
+
+* **<StdOptRead>** — This method reads an element of the array. It takes a
+  single argument, the full name of the element, and returns the value
+  inside. It is never called with the name of an alias. (The
+  **<OptRead-**_name_**>** methods described above delegate to this.)
+
+  If an implementation provides custom readers for each option so that it goes
+  to the right slot in a C structure, it does not need to provide an override
+  of this method.
+
+* **<StdOptWrite>** — This method writes an element of the array. It takes a
+  two arguments, the full name of the element and the value to write. Its
+  return value is ignored. It is never called with the name of an alias. (The
+  **<OptWrite-**_name_**>** methods described above delegate to this.)
+
+  If an implementation provides custom writers for each option so that it
+  comes from the right slot in a C structure, it does not need to provide an
+  override of this method.
+
+* **<OptionsMakeCheckpoint>** — This method saves the state so that it may be
+  restored. It takes no arguments and returns the saved state that can be used
+  with **<OptionsRestoreCheckpoint>** _on the same class_ if required. The
+  default implementation uses **array get**, but the method may be overridden;
+  the only constraint is that whatever the checkpoint creator creates must be
+  consumable by the matching checkpoint restorer. Any overriding
+  implementation _should_ include the superclass's checkpoint state in its own
+  checkpoint state (calling via **next**).
+
+  If _any_ options are implemented with C backing store, an override for this
+  method _should_ be provided. Note that this means that it is probably unwise
+  to override this method and not **<OptionsRestoreCheckpoint>**.
+
+* **<OptionsRestoreCheckpoint>** — This method restores a saved state created
+  with **<OptionsMakeCheckpoint>**. It takes a single argument, the saved
+  state. Its return value is ignored. The default implementation uses **array
+  set**, but the method may be overridden. No attempt is made to validate the
+  contents of a saved state. If overridden, the overriding implementation
+  should also call the superclass's implementation (calling via **next**) to
+  restore that portion of the checkpointed state.
+
+  If _any_ options are implemented with C backing store, an override for this
+  method _should_ be provided.  Note that this means that it is probably unwise
+  to override this method and not **<OptionsMakeCheckpoint>**.
 
 Note that **Initialise** requires an existing widget name. A consequence of
-that is that any true initialisation-only properties that need to be passed to
+that is that any true initialisation-only options that need to be passed to
 that widget must be manually parsed before the widget is created (_or_ the
 widget can be created, used for parsing, and then destroyed and rebuilt with
 the correct options; that's not too expensive if the temporary widget is never
 mapped).
 
-## Property Types
+## Option Types
 
-One key part of this specification is a system for typing of properties, since
-it is extremely common for Tk widget properties to be constrained to be of
+One key part of this specification is a system for typing of options, since it
+is extremely common for Tk widget options to be constrained to be of
 particular types. This will be done using an ensemble of type implementation
-commands, **tk::PropType**, with the member elements of the ensemble being
+commands, **tk::OptionType**, with the member elements of the ensemble being
 themselves ensemble-like (probably objects, but not necessarily), supporting
 at least two subcommands, **validate** and **default**.
 
@@ -206,21 +263,22 @@ canonical form if desired). The **default** subcommand will take no arguments,
 and return the default value usually associated with the type. (Note that
 there is no need to make either of these commands aware of which class or
 instance they’re being used with; types are independent of how they are used
-and these defaults can be overridden when the property is created.)
+and these defaults can be overridden when the option is created.)
 
 For example, this will allow the validation of a proposed value, *$foobar*,
-for a property of type *$gorp*, to be done by calling:
+for an option of type *$gorp*, to be done by calling:
 
-    tk::PropType $gorp validate $foobar
+    tk::OptionType $gorp validate $foobar
 
 The standard types will be:
+
+* **string**: any string. Defaults to the empty string. Validation always
+  succeeds on this type and never changes the value.
 
 * **boolean**: value acceptable to **string is boolean -strict** (e.g.,
   **true** or **off**). Defaults to **false**.
 
 * **zboolean**: empty string or boolean. Defaults to the empty string.
-
-* **string**: any string. Defaults to the empty string.
 
 * **integer**: any integer (i.e., acceptable to **string is entier
   -strict**). Defaults to **0**.
@@ -233,7 +291,7 @@ The standard types will be:
 * **zfloat**: any float (as above) or empty string. Defaults to the empty string.
 
 * **distance**: any screen distance (as parsed by **winfo fpixels**). Defaults
-  to **0p**.
+  to **0px**.
 
 * **image**: name of any Tk image, or empty string. Defaults to the empty string.
 
@@ -257,12 +315,12 @@ The standard types will be:
 * **dict**: any valid Tcl dictionary. Defaults to the empty dict (and empty string).
 
 The official mechanism for adding a new type will be via the class
-**tk::propertytype**. Instances of that will automatically plug themselves
+**tk::optiontype**. Instances of that will automatically plug themselves
 inside using their names, and will be implemented using a callback provided to
 the constructor. This will result in a class definition (approximately) like
 this:
 
-    oo::class create tk::propertytype {
+    oo::class create tk::optiontype {
        constructor {default testCommand} {
           ... # trivial implementation that saves the params
        }
@@ -287,33 +345,33 @@ In practice, things are more complex because there are three basic ways to
 validate a value. In particular, there are types for which there are tests
 that return a boolean, types for which there are parsers that error on
 failure, and types that are driven by a table of permitted values. As such,
-**tk::propertytype** is actually an abstract class and there are concrete
+**tk::optiontype** is actually an abstract class and there are concrete
 implementations of each of the validation options.
 
-When a type is created with **tk::propertytype createbool**, a boolean test is
+When a type is created with **tk::optiontype createbool**, a boolean test is
 expected to be provided as a command fragment that takes a single extra
 argument. An example of the use is this, which makes the **boolean** type
 described above:
 
-    tk::propertytype createbool boolean "false" {
+    tk::optiontype createbool boolean "false" {
         string is boolean -strict
     }
 
-When a type is created with **tk::propertytype createthrow**, the test instead
+When a type is created with **tk::optiontype createthrow**, the test instead
 is expected to throw an error on failure. Because this can be more complex, we
 assume that the value being tested is passed in the (local) variable
 `$value`. An example of the use is this, which makes the **distance** type
 described above:
 
-    tk::propertytype createthrow distance "0px" {
+    tk::optiontype createthrow distance "0px" {
         winfo fpixels . $value
     }
 
-When a type is created with **tk::propertytype createtable**, the test is
+When a type is created with **tk::optiontype createtable**, the test is
 driven by **tcl::prefix match** and all the caller has to do is supply the
 table. An example of this one is:
 
-    tk::propertytype createtable justify "left" {
+    tk::optiontype createtable justify "left" {
         center left right
     }
 
@@ -322,7 +380,19 @@ validation checks.
 
 Note that all of the types above are created with unqualified names; the names
 are mangled internally by the above methods so that they plug in correctly
-into the **tk::PropType** ensemble.
+into the **tk::OptionType** ensemble. This is implemented using the unexported
+**Create** method of **tk::optiontype**, for example like this:
+
+    method Create {realClass name args} {
+        # Condition the class name first
+        set name [namespace current]::[namespace tail $name]
+        # Delegate to the concrete subclass's create method
+        tailcall $realClass create $name {*}$args
+    }
+
+    forward createbool   my Create ::tk::BoolTestType
+    forward createthrow  my Create ::tk::ThrowTestType
+    forward createtable  my Create ::tk::TableType
 
 # Implementation
 
