--- a/tip/560.md
+++ b/tip/560.md
@@ -166,30 +166,35 @@ use the same basic TclOO mechanisms.)
 The following methods will be created for each option (where _name_ is the
 hyphen-removed version of the name):
 
-* **<OptDescribe-**_name_**>** — takes no arguments and returns a description
-  of the parts of the option descriptor that do not change. In particular,
-  this is a list of three items for non-alias options; these are the option
+* **&lt;OptDescribe-**_name_**&gt;** — takes no arguments and returns a
+  description of the parts of the option descriptor that do not change. In
+  particular:
+  
+  For ordinary options, this is a list of three items; these are the option
   database name of the option, the option database class of the option, and
-  the actual default value of the option. For aliases, this is a
-  single-element list containing the name of the target option.
+  the actual default value of the option.
+  
+  For aliases, this is a single-element list containing the name of the target
+  option.
 
-* **<OptValidate-**_name_**>** — takes a single value, checks whether the
-  value is of the type of the option, and returns the normalized option value.
-  Typically forwarded to the **validate** method of the option's type object.
+* **&lt;OptValidate-**_name_**&gt;** — takes a single value, checks whether
+  the value is of the type of the option, and returns the normalized option
+  value.  Typically forwarded to the **validate** method of the option's type
+  object.
 
-* **<OptRead-**_name_**>** — how to actually read the option out of whatever
-  storage it is implemented with. Takes no arguments and returns the current
-  value of the option. Note that if a method exists with this name in the
-  class, it is _not_ overridden by the **option** declaration; this makes
+* **&lt;OptRead-**_name_**&gt;** — how to actually read the option out of
+  whatever storage it is implemented with. Takes no arguments and returns the
+  current value of the option. Note that if a method exists with this name in
+  the class, it is _not_ overridden by the **option** declaration; this makes
   providing implementations in C on a case-by-case basis relatively straight
   forward.
 
-* **<OptWrite-**_name_**>** — how to actually write the option to whatever
-  storage it is implemented with. Takes a single argument, the value to write
-  (after validation and normalization). Return value is ignored.  Note that if
-  a method exists with this name in the class, it is _not_ overridden by the
-  **option** declaration; this makes providing implementations in C on a
-  case-by-case basis relatively straight forward.
+* **&lt;OptWrite-**_name_**&gt;** — how to actually write the option to
+  whatever storage it is implemented with. Takes a single argument, the value
+  to write (after validation and normalization). Return value is ignored.
+  Note that if a method exists with this name in the class, it is _not_
+  overridden by the **option** declaration; this makes providing
+  implementations in C on a case-by-case basis relatively straight forward.
 
 The _default storage mechanism_ for options will be the array in the object
 instance with the empty local name (so the option `foo` will be in array
@@ -197,48 +202,49 @@ element variable `(foo)` in the instance namespace; this is a trick stolen
 from stooop). This can be overridden by defining appropriate non-exported
 methods, for which there are these implementations provided by default:
 
-* **<StdOptRead>** — This method reads an element of the array. It takes a
-  single argument, the full name of the element, and returns the value
+* **&lt;StdOptRead&gt;** — This method reads an element of the array. It takes
+  a single argument, the full name of the element, and returns the value
   inside. It is never called with the name of an alias. (The
-  **<OptRead-**_name_**>** methods described above delegate to this.)
+  **&lt;OptRead-**_name_**&gt;** methods described above delegate to this.)
 
   If an implementation provides custom readers for each option so that it goes
   to the right slot in a C structure, it does not need to provide an override
   of this method.
 
-* **<StdOptWrite>** — This method writes an element of the array. It takes a
-  two arguments, the full name of the element and the value to write. Its
-  return value is ignored. It is never called with the name of an alias. (The
-  **<OptWrite-**_name_**>** methods described above delegate to this.)
+* **&lt;StdOptWrite&gt;** — This method writes an element of the array. It
+  takes a two arguments, the full name of the element and the value to write.
+  Its return value is ignored. It is never called with the name of an alias.
+  (The **&lt;OptWrite-**_name_**&gt;** methods described above delegate to
+  this.)
 
   If an implementation provides custom writers for each option so that it
   comes from the right slot in a C structure, it does not need to provide an
   override of this method.
 
-* **<OptionsMakeCheckpoint>** — This method saves the state so that it may be
-  restored. It takes no arguments and returns the saved state that can be used
-  with **<OptionsRestoreCheckpoint>** _on the same class_ if required. The
-  default implementation uses **array get**, but the method may be overridden;
-  the only constraint is that whatever the checkpoint creator creates must be
-  consumable by the matching checkpoint restorer. Any overriding
-  implementation _should_ include the superclass's checkpoint state in its own
-  checkpoint state (calling via **next**).
+* **&lt;OptionsMakeCheckpoint&gt;** — This method saves the state so that it
+  may be restored. It takes no arguments and returns the saved state that can
+  be used with **&lt;OptionsRestoreCheckpoint&gt;** _on the same class_ if
+  required. The default implementation uses **array get**, but the method may
+  be overridden; the only constraint is that whatever the checkpoint creator
+  creates must be consumable by the matching checkpoint restorer. Any
+  overriding implementation _should_ include the superclass's checkpoint state
+  in its own checkpoint state (calling via **next**).
 
   If _any_ options are implemented with C backing store, an override for this
   method _should_ be provided. Note that this means that it is probably unwise
-  to override this method and not **<OptionsRestoreCheckpoint>**.
+  to override this method and not **&lt;OptionsRestoreCheckpoint&gt;**.
 
-* **<OptionsRestoreCheckpoint>** — This method restores a saved state created
-  with **<OptionsMakeCheckpoint>**. It takes a single argument, the saved
-  state. Its return value is ignored. The default implementation uses **array
-  set**, but the method may be overridden. No attempt is made to validate the
-  contents of a saved state. If overridden, the overriding implementation
-  should also call the superclass's implementation (calling via **next**) to
-  restore that portion of the checkpointed state.
+* **&lt;OptionsRestoreCheckpoint&gt;** — This method restores a saved state
+  created with **&lt;OptionsMakeCheckpoint&gt;**. It takes a single argument,
+  the saved state. Its return value is ignored. The default implementation
+  uses **array set**, but the method may be overridden. No attempt is made to
+  validate the contents of a saved state. If overridden, the overriding
+  implementation should also call the superclass's implementation (calling via
+  **next**) to restore that portion of the checkpointed state.
 
   If _any_ options are implemented with C backing store, an override for this
-  method _should_ be provided.  Note that this means that it is probably unwise
-  to override this method and not **<OptionsMakeCheckpoint>**.
+  method _should_ be provided.  Note that this means that it is probably
+  unwise to override this method and not **&lt;OptionsMakeCheckpoint&gt;**.
 
 Note that **Initialise** requires an existing widget name. A consequence of
 that is that any true initialisation-only options that need to be passed to
